<resources>
    <string name="app_name">OnlyFanshop</string>
    <string name="category">Category</string>
    <string name="_0">0VND</string>
    <string name="productTotal">Tổng giá trị sản phẩm</string>
    <string name="deliveryCost">Phí vận chuyển</string>
    <string name="total">Tổng thanh toán</string>
    <string name="checkOut">Thanh toán</string>

    <!-- Facebook Login Configuration -->
    <string name="facebook_app_id">740687805683224</string>
    <string name="facebook_client_token">62eedeef160da0a7f138a5e90e0bee0b</string>

    <!-- Google Sign-In Configuration -->
    <string name="default_web_client_id">328191492825-8iket64hs1nr651gn0jnb19js7aimj10.apps.googleusercontent.com</string>
    <string name="splash_title">YOUR\nSTYLE WILL\nTELL ABOUT\nYOU</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="uilover">UILover</string>
    <string name="already_have_an_account_signin">Already have an account? <font color="#3DDC84">Sign In</font></string>
    <string name="cart">Cart</string>
    <string name="danh_m_c">Danh mục</string>
    <string name="home">Home</string>
    <string name="admin_uid">admin_uid</string>
    <string name="sold_format">Đã bán %1$d</string>
    <string name="search">Search</string>

    <!-- New strings -->
    <string name="shop">Shop</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="avatar">Avatar</string>
</resources>